# msp-halo-annotation-editor

./: README.md
MSP_HALO_Annotation_Editor 2/: README.md  pyproject.toml
MSP_HALO_Annotation_Editor 2/haloqc/: __main__.py  main.py  pipeline.py
MSP_HALO_Annotation_Editor 2/haloqc/core/: bilateral.py  colors.py  edits.py  geometry.py  qc.py  separator.py
MSP_HALO_Annotation_Editor 2/haloqc/io/: annotations.py  ndpi.py  pairing.py
MSP_HALO_Annotation_Editor 2/haloqc/ui/: bilateral_view.py  canvas.py  cut_line_item.py  edit_dialogs.py  input_panel.py  main_window.py  sample_list.py  separator_view.py  theme.py  thumbnail_controller.py
